<resources>
    <string name="app_name">Laboratorio2</string>
    <string name="formulario_sintomas">Formulario Sintomas</string>
    <string name="le_ha_faltado_el_aire_o_ha_tenido_dificultad_para_respirar">¿Le ha faltado el aire o ha tenido dificultad para respirar?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="se_ha_sentido_ltimamente_m_s_fatigado_de_lo_usual">¿Se ha sentido últimamente más fatigado de lo usual?</string>
    <string name="ha_tenido_fiebre_o_temperatura_mayor_a_38_c_en_los_ltimos_dias">¿Ha tenido fiebre o temperatura mayor a 38*C en los últimos dias?</string>
    <string name="ha_tenido_tos_en_los_ltimos_dias">¿Ha tenido tos en los últimos dias?</string>
    <string name="ha_notado_disminuci_n_del_olfato_o_del_sabor_de_los_alimentos">¿Ha notado disminución del olfato o del sabor de los alimentos?</string>
    <string name="ha_estado_en_contacto_con_alguien_diagnosticado_o_sospechoso_de_covid_19_en_los_ltimos_d_as">¿Ha estado en contacto con alguien diagnosticado o sospechoso de covid-19 en los últimos días?</string>
    <string name="enviar_sintomas">Enviar Sintomas</string>
    <string-array name="si_no">
        <item>Si</item>
        <item>No</item>
    </string-array>
</resources>